public class ProductShovel implements Tool{
    @Override
    public String dig() {
        return "Shovel used to dig the field";
    }
}
