public interface Tool {
    String dig();
}
